<resources>
    <string name="app_name">MyGuests</string>

    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>

    <string name="configuracoes">Configurações</string>
    <string name="todos">Todos</string>
    <string name="presentes">Presentes</string>
    <string name="ausentes">Ausentes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">Nome</string>
    <string name="n_o_confirmado">Não Confirmado</string>
    <string name="presente">Presente</string>
    <string name="ausente">Ausente</string>
    <string name="salvar">Salvar</string>
    <string name="name_obrigatorio">Nome é Obrigatorio</string>
    <string name="guest_saved">Convidado salvo com Sucesso !</string>
    <string name="guest_removed">Convidado removido com Sucesso !</string>
    <string name="guest_error_save">Algo de errado Aconteceu !</string>
    <string name="remove_guest_title_alert">Remoção de Convidado</string>
    <string name="remove_guest_text_alert">Deseja remover o Convidado ?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="total">Total</string>
</resources>
